fe: fix displaying popup window in Firefox (use "scale" instead of "rotate" transformation)
3D rotation is broken in Firefox, see: https://bugzilla.mozilla.org/show_bug.cgi?id=1280093

--- a/project-base/src/SS6/ShopBundle/Resources/styles/front/common/components/box/cookies.less
+++ b/project-base/src/SS6/ShopBundle/Resources/styles/front/common/components/box/cookies.less
@@ -19,7 +19,7 @@
 	transition: @transition transform;
 
 	&--closing {
-		transform: rotateX(90deg);
+		transform: scaleY(0);
 	}
 
 	&__in {
